# budsmonitor-windows

./: .editorconfig  .gitignore  README.md
.github/workflows/: ci-windows.yml  ci.yml
docs/: TROUBLESHOOTING.md  windows-porting-analysis.md  windows-porting-progress.md  wsl2-usbipd-guide.md
docs/budsmonitor-integrated-design/: README.md  SOURCES.md
docs/budsmonitor-integrated-design/adr/: ADR-001-new-wpf-app-instead-of-continuing-qt.md  ADR-002-ble-only-airpods-v1.md  ADR-003-local-only-privacy.md
docs/budsmonitor-integrated-design/checklists/: manual-test-script.md  release-checklist.md
docs/budsmonitor-integrated-design/docs/: 00-executive-summary.md  01-existing-repo-integration-audit.md  02-product-requirements.md  03-architecture.md  04-provider-model.md  05-airpods-provider.md  06-galaxy-buds-provider.md  07-generic-gatt-provider.md  08-ui-ux-spec.md  09-storage-privacy.md  10-diagnostics.md  11-build-release.md  12-quality-test-plan.md  13-implementation-goals.md  14-risk-register.md
docs/budsmonitor-integrated-design/prompts/: GOAL-03-airpods-parser-port.md  GOAL-04-ble-scanner.md  GOAL-05-airpods-provider-integration.md  GOAL-09-diagnostics-export.md
docs/budsmonitor-integrated-design/specs/: provider-contracts.cs  settings.schema.json
docs/research/: README.md  airpods-connect-plan.md  legacy-libre-pods-windows-porting.md  windows-aacp-feasibility.md
experiments/windows-feasibility/: LibrePods.WindowsFeasibility.sln  LibrePods.WindowsFeasibility.slnf  README.md  RESULTS.md
experiments/windows-feasibility/battery-tray-mvp/: BatteryTrayMvp.csproj  Program.cs
experiments/windows-feasibility/ble-advertisement-probe/: BleAdvertisementProbe.csproj  Program.cs
experiments/windows-feasibility/bluetooth-service-probe/: Program.cs
linux/: CMakeLists.txt
linux/ble/: bleadvertisementparser.cpp  bleadvertisementparser.h  bleinfo.h  blemanager.cpp  blemanager.h  iblescanner.h
linux/platform/windows/: README.md  windowsairpodsstate.h  windowsblescanner.cpp  windowsblescanner.h  windowstraymain.cpp
linux/platform/windows/qml/: BatteryIndicator.qml  Tray.qml
linux/tests/: ble_parser_smoke.cpp  windows_aacp_probe.cpp  windows_ble_scanner_smoke.cpp  windows_bredr_l2cap_probe.cpp  windows_hci_ioctl_probe.cpp  windows_tray_mvp.cpp
scripts/: publish-portable.ps1
src/: BudsMonitor.sln  Directory.Build.props
src/BudsMonitor.App/: App.xaml  App.xaml.cs  BudsMonitor.App.csproj  CacheMapping.cs  DeviceRegistry.cs  DiagnosticsWindow.xaml  DiagnosticsWindow.xaml.cs  InverseBoolToVisibilityConverter.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  TextPromptWindow.xaml  TextPromptWindow.xaml.cs  UpdateDialog.xaml  UpdateDialog.xaml.cs  WindowsStartup.cs
src/BudsMonitor.App/Themes/: Dark.xaml  Light.xaml
src/BudsMonitor.App/ViewModels/: DashboardViewModel.cs  DeviceCardViewModel.cs
src/BudsMonitor.Application/: ApplicationAssembly.cs  BackoffPolicy.cs  NotificationRequest.cs  NotificationRuleOptions.cs  NotificationRuleService.cs
src/BudsMonitor.Application/Devices/: DeviceListResolver.cs  EarbudFamily.cs
src/BudsMonitor.Application/Updates/: GitHubReleaseParser.cs  ReleaseNotesMarkdown.cs  UpdateInfo.cs  UpdateService.cs
src/BudsMonitor.Bluetooth/: BleAdvertisementScannerService.cs  BleScannerState.cs  BluetoothAssembly.cs  BluetoothRadioWatcher.cs  BudsMonitor.Bluetooth.csproj  PairedBleDeviceEnumerator.cs
src/BudsMonitor.Diagnostics/: BudsMonitor.Diagnostics.csproj  DiagnosticsAssembly.cs  DiagnosticsEnvironment.cs  DiagnosticsExportService.cs  DiagnosticsInput.cs
src/BudsMonitor.Domain/: BatteryProviderContracts.cs  BatterySnapshot.cs  BleAdvertisementFrame.cs  DomainAssembly.cs
src/BudsMonitor.Infrastructure/: BudsMonitor.Infrastructure.csproj  InfrastructureAssembly.cs
src/BudsMonitor.Infrastructure/Cache/: BatteryCacheFile.cs  BatteryCacheRepository.cs
src/BudsMonitor.Infrastructure/Devices/: DeviceRegistryFile.cs  DeviceRegistryRepository.cs
src/BudsMonitor.Infrastructure/Json/: StorageJson.cs
src/BudsMonitor.Infrastructure/Logging/: LoggingBootstrapper.cs
src/BudsMonitor.Infrastructure/Settings/: BudsMonitorSettings.cs  SettingsRepository.cs
src/BudsMonitor.Infrastructure/Storage/: StoragePaths.cs
src/BudsMonitor.Providers.AirPods/: AirPodsAdvertisementContext.cs  AirPodsAdvertisementParser.cs  AirPodsAdvertisementSnapshot.cs  AirPodsBatteryMapper.cs  AirPodsBleAdvertisementProvider.cs  AirPodsModelCatalog.cs  AirPodsProviderAssembly.cs
src/BudsMonitor.Providers.GalaxyBuds/: BudsMonitor.Providers.GalaxyBuds.csproj  GalaxyBudsAdvertisementProvider.cs  GalaxyBudsClassifier.cs  GalaxyBudsProfile.cs  GalaxyBudsProfileCatalog.cs  GalaxyBudsProviderAssembly.cs
src/BudsMonitor.Providers.GalaxyBuds/Profiles/: galaxy-buds-profiles.json
src/BudsMonitor.Providers.Gatt/: BatteryLevelParser.cs  BudsMonitor.Providers.Gatt.csproj  GattBatteryReadOutcome.cs  GattProviderAssembly.cs  GattReadFailureMapper.cs  StandardGattBatteryProvider.cs  WindowsGattClient.cs
src/BudsMonitor.Tests/: AirPodsAdvertisementParserTests.cs  AirPodsBleAdvertisementProviderTests.cs  BackoffPolicyTests.cs  BatteryCacheRepositoryTests.cs  BatteryLevelParserTests.cs  BudsMonitor.Tests.csproj  DeviceListResolverTests.cs  DeviceRegistryRepositoryTests.cs  DiagnosticsExportServiceTests.cs  GalaxyBudsClassifierTests.cs  GitHubReleaseParserTests.cs  NotificationRuleServiceTests.cs  ReleaseNotesMarkdownTests.cs  SettingsRepositoryTests.cs  SolutionSmokeTests.cs  StandardGattBatteryProviderTests.cs
